--- a/run/config/splash.properties
+++ b/run/config/splash.properties
@@ -1,5 +1,5 @@
 #Splash screen properties
-#Thu Aug 04 18:24:53 EEST 2016
+#Thu Aug 04 11:46:50 PDT 2016
 logoTexture=textures/gui/title/mojang.png
 background=0xFFFFFF
 font=0x0
