--- a/build.gradle
+++ b/build.gradle
@@ -60,3 +60,11 @@ processResources {
         exclude "mcmod.info"
     }
 }
+
+idea{
+    module{
+        inheritOutputDirs = false
+        outputDir = compileJava.destinationDir
+        testOutputDir = compileTestJava.destinationDir
+    }
+}
