--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,10 @@ buildscript {
 
 apply plugin: "net.minecraftforge.gradle.forge"
 
+configurations.all {
+    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
+}
+
 version = "1.0"
 group = "com.teamwizardry"
 archivesBaseName = "refraction"
@@ -40,7 +44,7 @@ repositories {
 }
 
 dependencies {
-    compile 'com.github.TeamWizardry:LibrarianLib:8883b77b52'
+    compile 'com.github.TeamWizardry:LibrarianLib:-SNAPSHOT'
     deobfCompile "mezz.jei:jei_1.9.4:3.4.0.204"
 }
 
