fixed assembly table not dropping items. fixed progression bug with reflective alloys and mirrors from magnifier alpha reduction

--- a/build.gradle
+++ b/build.gradle
@@ -47,12 +47,10 @@ repositories {
     mavenCentral()
     maven { url "https://jitpack.io" }
     maven { url "http://dvs1.progwml6.com/files/maven" }
+    maven { url "http://mobiusstrip.eu/maven" }
     maven {
         name 'tterag maven'
         url "http://maven.tterrag.com/"
-    }
-    maven {
-        url "http://mobiusstrip.eu/maven"
     }
 }
 
@@ -60,9 +58,6 @@ dependencies {
     compile 'com.github.TeamWizardry:LibrarianLib:-SNAPSHOT'
     deobfCompile "mezz.jei:jei_1.10.2:3.10.0.261:api"
     runtime "mezz.jei:jei_1.10.2:3.10.0.261"
-    compileOnly "mcjty.theoneprobe:TheOneProbe:1.9.4-1.0.6-17"
-    compileOnly "mcp.mobius.waila:Waila:1.7.0-B3_1.9.4"
-
 }
 
 processResources {
