I think that's Minetweaker done, just needs testing

--- a/build.gradle
+++ b/build.gradle
@@ -60,9 +60,9 @@ repositories {
 
 dependencies {
     compile 'com.github.TeamWizardry:LibrarianLib:-SNAPSHOT'
-    deobfCompile "mezz.jei:jei_1.10.2:3.13.6.387:api"
-    deobfCompile "MineTweaker3:MineTweaker3-API:3.0.14.59"
-    runtime "mezz.jei:jei_1.10.2:3.13.6.387"
+    deobfCompile "mezz.jei:jei_1.10.2:3.13.3.382:api"
+    compile "MineTweaker3:MineTweaker3-API:3.0.14.59"
+    runtime "mezz.jei:jei_1.10.2:3.13.3.382"
 }
 
 processResources {
