update to using a bleeding jar

--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,7 @@ minecraft {
 
 repositories {
     mavenCentral()
-    maven { url "https://jitpack.io" }
+//    maven { url "https://jitpack.io" }
     maven { url "http://dvs1.progwml6.com/files/maven" }
     maven { url "http://mobiusstrip.eu/maven" }
     maven {
@@ -59,7 +59,7 @@ repositories {
 }
 
 dependencies {
-    compile 'com.github.TeamWizardry:LibrarianLib:-SNAPSHOT'
+//    compile 'com.github.TeamWizardry:LibrarianLib:-SNAPSHOT'
     deobfCompile "mezz.jei:jei_1.10.2:3.13.3.382:api"
     compile "MineTweaker3:MineTweaker3-API:3.0.14.59"
     runtime "mezz.jei:jei_1.10.2:3.13.3.382"
