--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ repositories {
 }
 
 minecraft {
-    version = "1.10.2-12.18.1.2095"
+    version = "1.11-13.19.1.2189"
     runDir = "run"
 
     // the mappings can be changed at any time, and must be in the following format.
@@ -39,7 +39,7 @@ minecraft {
     // stable_#            stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not always work.
     // simply re-run your setup task after changing the mappings to update your workspace.
-    mappings = "stable_29"
+    mappings = "snapshot_20161217"
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 }
 
@@ -58,9 +58,9 @@ repositories {
 }
 
 dependencies {
-    deobfCompile "mezz.jei:jei_1.10.2:3.13.3.382:api"
+    deobfCompile "mezz.jei:jei_1.11:4.1.1.207:api"
     compile "MineTweaker3:MineTweaker3-API:3.0.14.59"
-    runtime "mezz.jei:jei_1.10.2:3.13.3.382"
+    runtime "mezz.jei:jei_1.11:4.1.1.207"
 }
 
 processResources {
