--- a/build.gradle
+++ b/build.gradle
@@ -8,11 +8,9 @@ buildscript {
     }
     dependencies {
         classpath "net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
-apply plugin: 'kotlin'
 apply plugin: "net.minecraftforge.gradle.forge"
 
 version = "$mod_version"
@@ -36,25 +34,17 @@ minecraft {
 repositories {
     mavenCentral()
     maven { url = "http://maven.bluexin.be/repository/snapshots/" }
-    maven {
-        url 'http://maven.shadowfacts.net/'
-    }
     maven { url = "http://dvs1.progwml6.com/files/maven" }
-    maven { url = "http://tehnut.info/maven" }
     maven { url = "http://maven.tterrag.com/" }
-    maven {
-        name 'jared maven'
-        url "http://maven.blamejared.com"
-    }
+    maven { url = "http://maven.blamejared.com" }
 }
 
 dependencies {
-    //compile "com.teamwizardry.librarianlib:librarianlib-1.12.2:$liblib_version-SNAPSHOT:deobf"
-    //deobfCompile "com.teamwizardry.librarianlib:librarianlib-$liblib_version"
+    compile "com.teamwizardry.librarianlib:librarianlib-1.12.2:$liblib_version-SNAPSHOT:deobf"
     deobfCompile "mezz.jei:jei_1.12.2:$jei_version:api"
     runtime "mezz.jei:jei_1.12.2:$jei_version"
 
-    compile fileTree(dir: 'libs', include: '*.jar')
+    compile "CraftTweaker2:CraftTweaker2-MC1120-Main:1.12-$ct_version"
 }
 
 processResources {
@@ -67,7 +57,8 @@ processResources {
         include "mcmod.info"
 
         // replace version and mcversion
-        expand "version": project.version, "mcversion": project.minecraft.version
+        expand "version": project.version,
+                "mcversion": project.minecraft.version
     }
 
     // copy everything else, thats not the mcmod.info
