--- a/gradle.properties
+++ b/gradle.properties
@@ -4,4 +4,4 @@ forge_version=14.23.4.2718
 mcp_version=snapshot_20180601
 jei_version=4.9.2.+
 liblib_version=4.9
-kotlin_version = 1.2.31
+ct_version=4.1.9.6
