--- a/src/main/resources/assets/refraction/models/block/projector.json
+++ b/src/main/resources/assets/refraction/models/block/projector.json
@@ -1,5 +1,5 @@
 {
-  "__comment": "Designed by LordSaad with Cubik Studio - https://cubik.studio",
+  "__comment": "Designed by Demoniaque with Cubik Studio - https://cubik.studio",
   "textures": {
     "particle": "refraction:blocks/projector_base",
     "texture1": "blocks/glass",
