updated deps and mappings

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
 mod_version=1.9
 patch_version=6
 mc_version=1.12.2
-forge_version=14.23.4.2739
-mcp_version=snapshot_20180601
-jei_version=4.9.2.+
-liblib_version=4.12
+forge_version=14.23.1.2594
+mcp_version=stable_39
+jei_version=4.12.0.+
+liblib_version=4.15
 ct_version=4.1.9.6
 tesla_version=1.0.63
